# rar-rs

./: .gitignore  LICENSE  README.md  _config.yml  cook.sh  index.html
.github/: FUNDING.yml
.github/workflows/: WORKFLOW_VARIABLES.md  build_package_and_sign_macos.yaml  debug_environment_setup.yaml  pack_rar_data.yaml  push_to_itchio.yaml  release_version.yaml
content/base/: base.soundbank  mystic_mountain.tmj
data/base/: base.omsb  bg-menu.omtr  grassland.tmj  grassland_b_1.omtr  inconsolata.omfont  ingame_pause_dialog.ui_config.yaml  mystic_mountain.tsj  mystic_mountain_f_02.omtr  paklist.txt  player-atlas-0.map  player-atlas-1.atlas  player-atlas-1.map  player-backflip-left-0033.omtr  player.entity_config.yaml  quit_app_dialog.ui_config.yaml  rar-default.tsj  something.txt  test.omscript.rs  tileset-default-0.atlas  tileset-default-0.map  tileset-grassland-0.atlas  tileset-grassland-0.map  tileset-mystic_mountain-0.atlas  tileset-mystic_mountain-0.map  ui-atlas.atlas  ui-atlas.map  ui-button_back.omtr  vegur.omfont  world_button.ui_config.yaml  worlds.world_list_config.yaml
docs/: JOURNEY.md  ROADMAP.md
docs/journey/: make_anim.sh  make_strip_video.sh
rar-content/backgrounds/: background.asset_config.yaml
rar-content/shaders/: textured_desaturated_fs.glsl
rar-content/ui/: ui.asset_config.yaml
rar-data/: bg-menu-atlas.atlas  bg-menu-atlas.map  bg-title.atlas  bg-title.map  bg-title.omtr  c64.omfont  dev.world  player-atlas-0.atlas  player-atlas-0.map  player-backflip-right-0036.omtr  player.entity_config.yaml  rar-default.tsj  rar.renderer_config.yaml  textured_vs.glsl  tile_default_block.omtr  tileset-default-0.atlas  tileset-default-0.map  ui-atlas.atlas  ui-atlas.map  world-dev.tmj
rar-rs/: Cargo.toml  Info.plist  Justfile  TODO.md  build.rs  fixed_size.scpt  fixed_size.sh
rar-rs/src/: lib.rs  omscript.rs  rar.rs  rar_main.rs  ui.rs
rar-rs/src/omscript/: script.rs  script_context.rs  script_vm.rs
rar-rs/src/rar/: app_update_context.rs  audio_message.rs  camera.rs  data.rs  dialogs.rs  effect_ids.rs  entities.rs  entity_update_context.rs  font_ids.rs  game.rs  game_state.rs  game_state_debug_collisions.rs  game_state_game.rs  game_state_menu.rs  game_state_response_data.rs  game_state_settings.rs  layer_ids.rs  map.rs  map_tmj.rs  player_input_context.rs  rar_app.rs  rar_app_egui.rs  rar_script_context.rs  rar_script_function_app_quit.rs  rar_script_function_queue_screenshot.rs  rar_script_function_ui_click_element_with_name.rs  rar_script_function_ui_click_pos.rs  rar_ui_update_context.rs  tileset.rs  tileset_tsj.rs  world.rs  world_list.rs  world_renderer.rs  world_world.rs
rar-rs/src/rar/dialogs/: debug_navigation_dialog.rs  ingame_pause_dialog.rs  quit_app_dialog.rs  settings_dialog.rs  world_selection_dialog.rs
rar-rs/src/rar/entities/: background.rs  entity.rs  entity_configuration.rs  entity_ids.rs  entity_manager.rs  player.rs
rar-rs/src/ui/: ui_3x3_image.rs  ui_block.rs  ui_button.rs  ui_debug_config.rs  ui_element.rs  ui_element_base.rs  ui_element_container.rs  ui_element_container_data.rs  ui_element_factory.rs  ui_event.rs  ui_gravity_box.rs  ui_grid_box.rs  ui_hbox.rs  ui_image.rs  ui_label.rs  ui_renderer.rs  ui_spacer.rs  ui_system.rs  ui_toggle_button.rs  ui_update_context.rs  ui_vbox.rs
rar-workfiles/backgrounds/: bg-menu.xcf  bg-title.xcf
workflow/helpers/: env.sh  (+5 more)
(+54 files in other folders)
