[package]
name = "rar-rs"
version = "0.21.19-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="rar"
path="src/rar_main.rs"

[features]
#default = []
default = [ "audio-apple" ]
standalone = []
#audio-apple = [ "oml-audio/use_apple" ]
#audio-miniaudio = [ "oml-audio/use_miniaudio" ]
audio-apple = []
audio-miniaudio = []

[dependencies]
anyhow = "1.0.58"
rand = "0.8.5"
serde = { version = "1.0.139", features = ["std", "derive"] }
serde_yaml = "0.8.25"
serde_json = "1.0.82"
base64 = "0.13.0"
derive-getters = "0.2.0"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
atty = "0.2.14"

[build-dependencies]
chrono = "0.4.23"

[dependencies.oml-game]
#path = "../../oml-game"
version = "0.20.0-dev"

[patch.crates-io]
## oml-game = { path = "../../oml-game" }
## oml-game = { git = "https://github.com/AndreasOM/oml-game", branch = "episode-0018" }
